@@ -32,16 +32,21 @@ function clippy_start($sec2) {
 		if (is_file("include/help/clippy/" . $sec2 . ".php")) {
 			require("include/help/clippy/" . $sec2 . ".php");
 			
-			clippy_start_page();
+			$tours = clippy_start_page();
+			clippy_write_javascript_helps_steps($tours);
 		}
 		
 		//Add homepage for all pages for to show the "task sugestions"
 		require("include/help/clippy/homepage.php");
-		clippy_start_page_homepage();
+		
+		$tours = clippy_start_page_homepage();
+		clippy_write_javascript_helps_steps($tours);
 	}
 	else {
 		require("include/help/clippy/homepage.php");
-		clippy_start_page_homepage();
+		
+		$tours = clippy_start_page_homepage();
+		clippy_write_javascript_helps_steps($tours);
 	}
 }
 
@@ -49,38 +54,66 @@ function clippy_clean_help() {
 	set_cookie('clippy', null);
 }
 
-function clippy_write_javascript_helps_steps($helps,
-	$force_first_step_by_default = true) {
+function clippy_write_javascript_helps_steps($tours) {
 	
 	global $config;
+	
+	$first_step_by_default = false;
+	if (isset($tours['first_step_by_default']))
+		$first_step_by_default = $tours['first_step_by_default'];
+	
+	//For the help context instead the clippy
+	$help_context = false;
+	if (isset($tours['help_context']))
+		$help_context = $tours['help_context'];
+	
+	if ($help_context) {
+		$name_obj_js_tour = '{clippy_obj}';
+	}
+	else {
+		$name_obj_js_tour = 'intro';
+	}
 	
 	$clippy = get_cookie('clippy', false);
 	set_cookie('clippy', null);
 	
 	
 	//Get the help steps from a task
-	$steps = $helps[$clippy]['steps'];
-	if ($force_first_step_by_default) {
+	$steps = $tours['tours'][$clippy]['steps'];
+	if ($first_step_by_default) {
 		if (empty($steps)) {
 			//Get the first by default
-			$temp = reset($helps);
+			$temp = reset($tours['tours']);
 			$steps = $temp['steps'];
 		}
 	}
 	
-	$conf = $helps[$clippy]['conf'];
-	if ($force_first_step_by_default) {
+	if ($help_context) {
+		
+		foreach ($steps as $iterator => $step) {
+			$init_step_context = false;
+			if (isset($step['init_step_context']))
+				$init_step_context = $step['init_step_context'];
+			
+			if ($init_step_context) {
+				unset($steps[$iterator]['init_step_context']);
+				$steps[$iterator]['element'] = '{clippy}';
+			}
+		}
+	}
+	
+	$conf = $tours['tours'][$clippy]['conf'];
+	if ($first_step_by_default) {
 		if (empty($conf)) {
 			//Get the first by default
-			$temp = reset($helps);
+			$temp = reset($tours['tours']);
 			$conf = $temp['conf'];
 		}
 	}
 	
 	if (!empty($steps)) {
-		$name_obj_tour = 'intro';
-		if (!empty($conf['name_obj_tour'])) {
-			$name_obj_tour = $conf['name_obj_tour'];
+		if (!empty($conf['name_obj_js_tour'])) {
+			$name_obj_js_tour = $conf['name_obj_js_tour'];
 		}
 		
 		$autostart = true;
@@ -93,17 +126,36 @@ function clippy_write_javascript_helps_steps($helps,
 			$other_js = $conf['other_js'];
 		}
 		
+		$exit_js = '';
+		if (!empty($conf['exit_js'])) {
+			$exit_js = $conf['exit_js'];
+		}
+		$complete_js = '';
+		if (!empty($conf['complete_js'])) {
+			$complete_js = $conf['complete_js'];
+		}
+		$show_bullets = 0;
+		if (!empty($conf['show_bullets'])) {
+			$show_bullets = (int)$conf['show_bullets'];
+		}
+		$show_step_numbers = 0;
+		if (!empty($conf['show_step_numbers'])) {
+			$show_step_numbers = (int)$conf['show_step_numbers'];
+		}
+		
+		$help_context = false;
+		
 		?>
 		<script type="text/javascript">
-			var <?php echo $name_obj_tour; ?> = null;
+			var <?php echo $name_obj_js_tour; ?> = null;
 			
 			$(document).ready(function() {
-				<?php echo $name_obj_tour; ?> = introJs();
+				<?php echo $name_obj_js_tour; ?> = introJs();
 				
-				<?php echo $name_obj_tour; ?>.setOptions({
+				<?php echo $name_obj_js_tour; ?>.setOptions({
 					steps: <?php echo json_encode($steps); ?>,
-					showBullets: <?php echo json_encode($conf['showBullets']); ?>,
-					showStepNumbers: <?php echo json_encode($conf['showStepNumbers']); ?>,
+					showBullets: <?php echo $show_bullets; ?>,
+					showStepNumbers: <?php echo $show_step_numbers; ?>,
 					nextLabel: "<?php echo __('Next &rarr;'); ?>",
 					prevLabel: "<?php echo __('&larr; Back'); ?>",
 					skipLabel: "<?php echo __('Skip'); ?>",
@@ -111,7 +163,12 @@ function clippy_write_javascript_helps_steps($helps,
 					exitOnOverlayClick: false,
 					exitOnEsc: true, //false,
 				})
+				.oncomplete(function(value) {
+						<?php echo $complete_js; ?>;
+					})
 				.onexit(function(value) {
+						<?php echo $exit_js; ?>;
+						
 						exit = confirm("<?php echo __("Do you want to exit the help tour?"); ?>");
 						return exit;
 					});
@@ -127,7 +184,7 @@ function clippy_write_javascript_helps_steps($helps,
 				<?php
 				if ($autostart) {
 				?>
-					<?php echo $name_obj_tour; ?>.start();
+					<?php echo $name_obj_js_tour; ?>.start();
 				<?php
 				}
 				?>
@@ -148,23 +205,45 @@ function clippy_context_help($help = null) {
 	
 	ob_start();
 	$function = "clippy_" . $help;
-	$function();
+	$tours = $function();
+	clippy_write_javascript_helps_steps($tours);
 	$code = ob_get_clean();
 	
-	$code = str_replace('{clippy}', '#' . $id, $code); html_debug_print($code, true);
-	$code = str_replace('{clippy_obj}', 'intro_' . $id, $code); html_debug_print($code, true);
+	$code = str_replace('{clippy}', '#' . $id, $code);
+	$code = str_replace('{clippy_obj}', 'intro_' . $id, $code);
 	
 	$return = $code . 
 		'<div id="' . $id . '" style="display: inline;">' .
-		'<a onclick="intro_' .  $id . '.start();" href="javascript: return false;" >' .
+		'<a onclick="show_' .  $id . '();" href="javascript: void(0);" >' .
 			html_print_image(
 				"images/clippy_icon.png",
 				true) .
 		'</a>' .
 		'</div>
 		<script type="text/javascript">
+		
+		function show_' .  $id . '() {
+			if (intro_' .  $id . '.started()) {
+				started = 1;
+			}
+			else {
+				started = 0;
+			}
+			
+			if (started == 0)
+				intro_' .  $id . '.start();
+		}
+		
 		$(document).ready(function() {
-			$("#' . $id . ' img").pulsate ();
+			(function pulse_' . $id . '(){
+				$("#' . $id . ' img")
+					.delay(100)
+					.animate({\'opacity\': 1})
+					.delay(400)
+					.animate({\'opacity\': 0}, pulse_' . $id . ');
+			})();
+			
+			//$("#' . $id . ' img").pulsate ();
 		});
 		</script>
 		';
