@@ -20,107 +20,109 @@
  */
 
 function clippy_start_page() {
-	$helps = array();
+	
+	$return_tours = array();
+	$return_tours['first_step_by_default'] = false;
+	$return_tours['tours'] = array();
 	
 	//==================================================================
 	//Help tour about the monitoring with a ping (step 3)
 	//------------------------------------------------------------------
-	$helps['monitoring_server_step_3'] = array();
-	$helps['monitoring_server_step_3']['steps'] = array();
-	$helps['monitoring_server_step_3']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_3'] = array();
+	$return_tours['tours']['monitoring_server_step_3']['steps'] = array();
+	$return_tours['tours']['monitoring_server_step_3']['steps'][] = array(
 		'element'=> '#clippy',
 		'intro' => __('Now you must go to modules, don\'t worry I teach you.')
 		);
-	$helps['monitoring_server_step_3']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_3']['steps'][] = array(
 		'element'=> "img[alt='Modules']",
 		'intro' => __('Please click in this tab.')
 		);
-	$helps['monitoring_server_step_3']['conf'] = array();
-	$helps['monitoring_server_step_3']['conf']['showBullets'] = 0;
-	$helps['monitoring_server_step_3']['conf']['showStepNumbers'] = 0;
-	$helps['monitoring_server_step_3']['conf']['next_help'] = 'monitoring_server_step_4';
+	$return_tours['tours']['monitoring_server_step_3']['conf'] = array();
+	$return_tours['tours']['monitoring_server_step_3']['conf']['show_bullets'] = 0;
+	$return_tours['tours']['monitoring_server_step_3']['conf']['show_step_numbers'] = 0;
+	$return_tours['tours']['monitoring_server_step_3']['conf']['next_help'] = 'monitoring_server_step_4';
 	//==================================================================
 	
 	
 	//==================================================================
 	//Help tour about the monitoring with a ping (step 4)
 	//------------------------------------------------------------------
-	$helps['monitoring_server_step_4'] = array();
-	$helps['monitoring_server_step_4']['steps'] = array();
-	$helps['monitoring_server_step_4']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_4'] = array();
+	$return_tours['tours']['monitoring_server_step_4']['steps'] = array();
+	$return_tours['tours']['monitoring_server_step_4']['steps'][] = array(
 		'element'=> '#clippy',
 		'intro' => __('Now you must create the module, don\'t worry I teach you.')
 		);
-	$helps['monitoring_server_step_4']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_4']['steps'][] = array(
 		'element'=> "#moduletype",
 		'intro' => __('Choose the network server module.')
 		);
-	$helps['monitoring_server_step_4']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_4']['steps'][] = array(
 		'element'=> "input[name='updbutton']",
 		'intro' => __('And click in this button.')
 		);
-	$helps['monitoring_server_step_4']['conf'] = array();
-	$helps['monitoring_server_step_4']['conf']['showBullets'] = 0;
-	$helps['monitoring_server_step_4']['conf']['showStepNumbers'] = 0;
-	$helps['monitoring_server_step_4']['conf']['next_help'] = 'monitoring_server_step_5';
+	$return_tours['tours']['monitoring_server_step_4']['conf'] = array();
+	$return_tours['tours']['monitoring_server_step_4']['conf']['show_bullets'] = 0;
+	$return_tours['tours']['monitoring_server_step_4']['conf']['show_step_numbers'] = 0;
+	$return_tours['tours']['monitoring_server_step_4']['conf']['next_help'] = 'monitoring_server_step_5';
 	//==================================================================
 	
 	
 	//==================================================================
 	//Help tour about the monitoring with a ping (step 5)
 	//------------------------------------------------------------------
-	$helps['monitoring_server_step_5'] = array();
-	$helps['monitoring_server_step_5']['steps'] = array();
-	$helps['monitoring_server_step_5']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_5'] = array();
+	$return_tours['tours']['monitoring_server_step_5']['steps'] = array();
+	$return_tours['tours']['monitoring_server_step_5']['steps'][] = array(
 		'element'=> '#clippy',
 		'intro' => __('Now you must create the module, don\'t worry I teach you.')
 		);
-	$helps['monitoring_server_step_5']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_5']['steps'][] = array(
 		'element'=> '#clippy',
 		'intro' => __('We are going to fill the form.')
 		);
-	$helps['monitoring_server_step_5']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_5']['steps'][] = array(
 		'element'=> "#network_component_group",
 		'intro' => __('Please choose the Network Management.')
 		);
-	$helps['monitoring_server_step_5']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_5']['steps'][] = array(
 		'element'=> "#network_component",
 		'intro' => __('And choose the component with the name "Host Alive".')
 		);
-	$helps['monitoring_server_step_5']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_5']['steps'][] = array(
 		'element'=> "input[name='name']",
 		'intro' => __('You can change the name.')
 		);
-	$helps['monitoring_server_step_5']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_5']['steps'][] = array(
 		'element'=> "input[name='ip_target']",
 		'intro' => __('Check if this IP is the address of your machine.')
 		);
-	$helps['monitoring_server_step_5']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_5']['steps'][] = array(
 		'element'=> "input[name='crtbutton']",
 		'intro' => __('And only to finish it is clicking this button.')
 		);
-	$helps['monitoring_server_step_5']['conf'] = array();
-	$helps['monitoring_server_step_5']['conf']['showBullets'] = 0;
-	$helps['monitoring_server_step_5']['conf']['showStepNumbers'] = 0;
-	$helps['monitoring_server_step_5']['conf']['next_help'] = 'monitoring_server_step_6';
+	$return_tours['tours']['monitoring_server_step_5']['conf'] = array();
+	$return_tours['tours']['monitoring_server_step_5']['conf']['show_bullets'] = 0;
+	$return_tours['tours']['monitoring_server_step_5']['conf']['show_step_numbers'] = 0;
+	$return_tours['tours']['monitoring_server_step_5']['conf']['next_help'] = 'monitoring_server_step_6';
 	//==================================================================
 	
 	
 	//==================================================================
 	//Help tour about the monitoring with a ping (step 6)
 	//------------------------------------------------------------------
-	$helps['monitoring_server_step_6'] = array();
-	$helps['monitoring_server_step_6']['steps'] = array();
-	$helps['monitoring_server_step_6']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_6'] = array();
+	$return_tours['tours']['monitoring_server_step_6']['steps'] = array();
+	$return_tours['tours']['monitoring_server_step_6']['steps'][] = array(
 		'element'=> '#clippy',
 		'intro' => __('Now, your module is just created.<br/> And the status color is <b>blue</b>.<br/>This meaning of blue status is the module is not executed for first time.<br/>In the next seconds if there is not a problem, the status color will change to red or green.')
 		);
-	$helps['monitoring_server_step_6']['conf'] = array();
-	$helps['monitoring_server_step_6']['conf']['showBullets'] = 0;
-	$helps['monitoring_server_step_6']['conf']['showStepNumbers'] = 0;
+	$return_tours['tours']['monitoring_server_step_6']['conf'] = array();
+	$return_tours['tours']['monitoring_server_step_6']['conf']['show_bullets'] = 0;
+	$return_tours['tours']['monitoring_server_step_6']['conf']['show_step_numbers'] = 0;
 	//==================================================================
 	
-	
-	clippy_write_javascript_helps_steps($helps, false);
+	return $return_tours;
 }
 ?>
