@@ -21,51 +21,53 @@
 
 function clippy_start_page() {
 	
-	$helps = array();
+	$return_tours = array();
+	$return_tours['first_step_by_default'] = false;
+	$return_tours['tours'] = array();
 	
 	//==================================================================
 	//Help tour about the monitoring with a ping (step 1)
 	//------------------------------------------------------------------
-	$helps['monitoring_server_step_1'] = array();
-	$helps['monitoring_server_step_1']['steps'] = array();
-	$helps['monitoring_server_step_1']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_1'] = array();
+	$return_tours['tours']['monitoring_server_step_1']['steps'] = array();
+	$return_tours['tours']['monitoring_server_step_1']['steps'][] = array(
 		'element'=> '#clippy',
-		'intro' => __('I show how to monitoring a server.')
+		'intro' => __('I show how to ping a server.')
 		);
-	$helps['monitoring_server_step_1']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_1']['steps'][] = array(
 		'element'=> 'input[name="search"]',
 		'intro' => __('Please type a agent to save the modules for monitoring a server.')
 		);
-	$helps['monitoring_server_step_1']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_1']['steps'][] = array(
 		'element'=> 'input[name="srcbutton"]',
 		'intro' => __('Maybe if you typped correctly the name, you can see the agent.')
 		);
-	$helps['monitoring_server_step_1']['conf'] = array();
-	$helps['monitoring_server_step_1']['conf']['showBullets'] = 0;
-	$helps['monitoring_server_step_1']['conf']['showStepNumbers'] = 1;
-	$helps['monitoring_server_step_1']['conf']['next_help'] = 'monitoring_server_step_2';
+	$return_tours['tours']['monitoring_server_step_1']['conf'] = array();
+	$return_tours['tours']['monitoring_server_step_1']['conf']['show_bullets'] = 0;
+	$return_tours['tours']['monitoring_server_step_1']['conf']['show_step_numbers'] = 1;
+	$return_tours['tours']['monitoring_server_step_1']['conf']['next_help'] = 'monitoring_server_step_2';
 	//==================================================================
 	
 	
 	//==================================================================
 	//Help tour about the monitoring with a ping (step 2)
 	//------------------------------------------------------------------
-	$helps['monitoring_server_step_2'] = array();
-	$helps['monitoring_server_step_2']['steps'] = array();
-	$helps['monitoring_server_step_2']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_2'] = array();
+	$return_tours['tours']['monitoring_server_step_2']['steps'] = array();
+	$return_tours['tours']['monitoring_server_step_2']['steps'][] = array(
 		'element'=> '#clippy',
 		'intro' => __('Please choose the agent that you have searched.')
 		);
-	$helps['monitoring_server_step_2']['steps'][] = array(
+	$return_tours['tours']['monitoring_server_step_2']['steps'][] = array(
 		'element'=> '#agent_list',
 		'intro' => __('Choose the agent, please click in the name.')
 		);
-	$helps['monitoring_server_step_2']['conf'] = array();
-	$helps['monitoring_server_step_2']['conf']['showBullets'] = 0;
-	$helps['monitoring_server_step_2']['conf']['showStepNumbers'] = 0;
-	$helps['monitoring_server_step_2']['conf']['next_help'] = 'monitoring_server_step_3';
+	$return_tours['tours']['monitoring_server_step_2']['conf'] = array();
+	$return_tours['tours']['monitoring_server_step_2']['conf']['show_bullets'] = 0;
+	$return_tours['tours']['monitoring_server_step_2']['conf']['show_step_numbers'] = 0;
+	$return_tours['tours']['monitoring_server_step_2']['conf']['next_help'] = 'monitoring_server_step_3';
 	//==================================================================
 	
-	clippy_write_javascript_helps_steps($helps, false);
+	return $return_tours;
 }
 ?>
