@@ -1,3 +1,12 @@
+2014-08-14  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/functions_clippy.php,
+	include/help/clippy/godmode_agentes_modificar_agente.php,
+	include/help/clippy/homepage.php,
+	include/help/clippy/module_unknow.php,
+	include/help/clippy/godmode_agentes_configurar_agente.php,
+	include/javascript/intro.js: some fixes and improves in the clippy.
+
 2014-08-14  Koichiro Kikuchi <koichiro@rworks.jp>
 
 	* pandora_console_install: Refactored code and added "fakeroot"
